bk_ida/gccida/g3/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_epilogue/src/i386.c:4950:22: error: use of undeclared identifier 'machine_mode'
v24 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_epilogue/src/i386.c:4954:31: error: use of undeclared identifier 'machine_mode'
v26 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v25, global_rtl[4], v24); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_epilogue/src/i386.c:4960:22: error: use of undeclared identifier 'machine_mode'
v29 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_epilogue/src/i386.c:4966:31: error: use of undeclared identifier 'machine_mode'
v32 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v25, global_rtl[2], v24); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_expand_epilogue/src/obj/i386.o] Error 1
